--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ window.addEventListener('error', function (error) {
   alert(error.message)
 })
 </script>
+<script src="vconsole.min.js"></script>
 <script src="aubio.js"></script>
 <script src="tuner.js"></script>
 <script src="meter.js"></script>
