--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ window.addEventListener('error', function (error) {
 })
 </script>
 <script src="vconsole.min.js"></script>
+<script>
+  var vConsole = new VConsole();
+</script>
 <script src="aubio.js"></script>
 <script src="tuner.js"></script>
 <script src="meter.js"></script>
