--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ window.addEventListener('error', function (error) {
 <script src="vconsole.min.js"></script>
 <script>
   var vConsole = new VConsole();
+  console.log('vConsole');
 </script>
 <script src="aubio.js"></script>
 <script src="tuner.js"></script>
