--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@ window.addEventListener('error', function (error) {
   console.log('vConsole');
 </script>
 <script src="aubio.js"></script>
+<script>
+  console.log('aubio.js');
+</script>
 <script src="tuner.js"></script>
+<script>
+  console.log('tuner.js');
+</script>
 <script src="meter.js"></script>
 <script src="frequency-bars.js"></script>
 <script src="note.js"></script>
